--- a/src/com/notiflyapp/ui/GUI/view/thread_cell.fxml
+++ b/src/com/notiflyapp/ui/GUI/view/thread_cell.fxml
@@ -12,7 +12,7 @@
    <children>
       <HBox alignment="CENTER_LEFT" maxHeight="-Infinity" minHeight="-Infinity" prefHeight="40.0">
          <children>
-            <ImageView fitHeight="40.0" fitWidth="40.0" pickOnBounds="true" preserveRatio="true">
+            <ImageView id="image_icon" fitHeight="40.0" fitWidth="40.0" pickOnBounds="true" preserveRatio="true">
                <image>
                   <Image url="@../../../../../../../../Pictures/IMG_20150722_143310.jpg" />
                </image>
@@ -23,7 +23,7 @@
                   <Insets bottom="2.0" left="2.0" right="2.0" top="2.0" />
                </HBox.margin>
             </ImageView>
-            <Label maxWidth="-Infinity" minWidth="-Infinity" prefHeight="40.0" prefWidth="155.0" text="Brennan Douglas" HBox.hgrow="ALWAYS">
+            <Label id="name_label" maxWidth="-Infinity" minWidth="-Infinity" prefHeight="40.0" prefWidth="155.0" text="Brennan Douglas" HBox.hgrow="ALWAYS">
                <padding>
                   <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
                </padding>
