--- a/src/com/notiflyapp/ui/GUI/view/sms_cell.fxml
+++ b/src/com/notiflyapp/ui/GUI/view/sms_cell.fxml
@@ -8,10 +8,10 @@
 
 <AnchorPane fx:id="anchor" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1">
    <children>
-      <Label id="message_text" prefWidth="400.0" text="Label" wrapText="true" AnchorPane.bottomAnchor="5.0" AnchorPane.leftAnchor="5.0" AnchorPane.rightAnchor="5.0" AnchorPane.topAnchor="5.0">
+      <TextFlow id="message_text">
          <padding>
-            <Insets bottom="5.0" left="5.0" right="5.0" top="5.0" />
+            <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
          </padding>
-      </Label>
+      </TextFlow>
    </children>
 </AnchorPane>
