--- a/src/main/java/com/notiflyapp/ui/GUI/fxml/thread_cell.fxml
+++ b/src/main/java/com/notiflyapp/ui/GUI/fxml/thread_cell.fxml
@@ -14,7 +14,7 @@
          <children>
             <ImageView id="image_icon" fitHeight="40.0" fitWidth="40.0" pickOnBounds="true" preserveRatio="true">
                <image>
-                  <Image url="@../../../../../../../../Pictures/IMG_20150722_143310.jpg" />
+                  <Image />
                </image>
                <viewport>
                   <Rectangle2D />
