--- a/src/main/java/com/notiflyapp/ui/GUI/fxml/device_tab.fxml
+++ b/src/main/java/com/notiflyapp/ui/GUI/fxml/device_tab.fxml
@@ -20,9 +20,9 @@
                <children>
                   <VBox prefHeight="398.0" prefWidth="441.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
                      <children>
-                        <AnchorPane id="active_conversation_title_bar" maxHeight="-Infinity" minHeight="-Infinity" prefHeight="50.0" prefWidth="441.0">
+                        <AnchorPane id="active_conversation_title_bar" stylesheets="/com/notiflyapp/ui/GUI/style/Notifly.css" maxHeight="-Infinity" minHeight="-Infinity" prefHeight="50.0" prefWidth="441.0">
                            <children>
-                              <Label id="active_conversation_title_bar_title" alignment="CENTER" contentDisplay="CENTER" prefHeight="50.0" prefWidth="441.0" text="Start Conversation" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
+                              <Label id="active_conversation_title_bar_title" stylesheets="/com/notiflyapp/ui/GUI/style/Notifly.css" alignment="CENTER" contentDisplay="CENTER" prefHeight="50.0" prefWidth="441.0" text="Start Conversation" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
                                  <font>
                                     <Font size="24.0" />
                                  </font></Label>
@@ -34,7 +34,7 @@
                                  <children>
                                     <ScrollPane id="active_conversation_message_scroll_pane" fitToHeight="true" fitToWidth="true" hbarPolicy="NEVER" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
                                        <content>
-                                          <VBox id="active_conversation_message_vbox" />
+                                          <VBox id="active_conversation_message_vbox" stylesheets="/com/notiflyapp/ui/GUI/style/Notifly.css" styleClass="message-backdrop"/>
                                        </content>
                                     </ScrollPane>
                                  </children>
