--- a/src/main/java/com/notiflyapp/ui/GUI/style/Notifly.css
+++ b/src/main/java/com/notiflyapp/ui/GUI/style/Notifly.css
@@ -10,3 +10,14 @@
     -fx-background-radius: 10 10 0 10;
 }
 
+.message-backdrop {
+
+}
+
+#active_conversation_title_bar {
+
+}
+
+#active_conversation_title_bar_title {
+
+}
