--- a/src/main/java/com/notiflyapp/ui/GUI/style/Notifly.css
+++ b/src/main/java/com/notiflyapp/ui/GUI/style/Notifly.css
@@ -21,3 +21,75 @@
 #active_conversation_title_bar_title {
 
 }
+
+/* HOME SCREEN (HOME TAB) */
+
+.menu-button {
+    -fx-background-color: #666699;
+    -fx-background-radius: 0 0 0 0;
+    -fx-border-radius: 0 0 0 0;
+    -fx-font-family: Verdana, Tahoma;
+    -fx-font-weight: 600;
+    -fx-text-fill: whitesmoke;
+    -fx-font-size: 16px;
+}
+
+.menu-button-toggled {
+    -fx-background-color: #52527a;
+    -fx-background-radius: 0 0 0 0;
+    -fx-border-radius: 0 0 0 0;
+    -fx-font-family: Verdana, Tahoma;
+    -fx-font-weight: 600;
+    -fx-text-fill: whitesmoke;
+    -fx-font-size: 16px;
+}
+
+#connect_message {
+    -fx-font-weight: bold;
+    -fx-font-family: Verdana, Tahoma;
+    -fx-text-fill: whitesmoke;
+    -fx-font-size: 36px;
+}
+
+/* ALL TABS */
+
+.root {
+    -fx-focus-color: transparent;
+    -fx-background-color: #404040;
+}
+
+.tab-background {
+    -fx-background-color: #404040;
+}
+
+.tab-header-background {
+    -fx-background-color: derive(#52527a, -10%);
+    -fx-border-color: transparent transparent #303030 transparent;
+}
+
+.tab-pane > .tab-header-area > .headers-region > .tab {
+    -fx-border-radius: 0 0 0 0;
+    -fx-background-radius: 0 0 0 0;
+    -fx-border-width: 1px;
+}
+
+.tab-pane > .tab-header-area > .headers-region > .tab > .tab-container > .tab-label {
+    -fx-font-family: Verdana, Tahoma;
+    -fx-text-fill: whitesmoke;
+}
+
+.tab-pane > .tab-header-area > .headers-region > .tab:top {
+    -fx-background-color: #808080;
+    -fx-border-color: #303030 #303030 #303030 #303030;
+    -fx-color: #808080;
+}
+
+.tab-pane > .tab-header-area > .headers-region > .tab:selected {
+    -fx-background-color: #404040;
+    -fx-color: #404040;
+    -fx-border-color: #303030 #303030 #404040 #303030;
+}
+
+.tab-pane:focused > .tab-header-area > .headers-region > .tab .focus-indicator {
+    -fx-border-color: transparent;
+}
