--- a/src/main/java/com/notiflyapp/ui/GUI/fxml/sms_cell.fxml
+++ b/src/main/java/com/notiflyapp/ui/GUI/fxml/sms_cell.fxml
@@ -10,11 +10,14 @@
    <children>
       <VBox fillWidth="false">
          <children>
-            <TextFlow id="message_text" styleClass="left-message" stylesheets="/com/notiflyapp/ui/GUI/style/Notifly.css">
+            <Label id="message_text" styleClass="left-message" stylesheets="/com/notiflyapp/ui/GUI/style/Notifly.css" wrapText="true">
                <padding>
                   <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
                </padding>
-            </TextFlow>
+               <VBox.margin>
+                  <Insets left="10.0" right="10.0" />
+               </VBox.margin>
+            </Label>
             <Label id="message_date" text="Date">
                <font>
                   <Font size="10.0" />
